@@ -273,6 +273,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4035) Fix prev/next revision links on edit page
 * Fix custom namespaces on wikis set for Portuguese
 * Major overhaul of Special:Userlogin
+* Update ipblocks table in MySQL 5 table defs
+
 
 === Caveats ===
 
